# ros_msg_parser

./: CMakeLists.txt  README.md  conanfile.txt  package.xml
.github/workflows/: codeql.yml
example/: generic_subscriber.cpp  rosbag_example.cpp  selective_deserialization.cpp  simple.cpp
include/ros_msg_parser/: builtin_types.hpp  deserializer.hpp  helper_functions.hpp  ros_field.hpp  ros_message.hpp  ros_parser.hpp  ros_type.hpp  stringtree_leaf.hpp  tree.hpp
include/ros_msg_parser/details/: conversion_impl.hpp  exceptions.hpp
include/ros_msg_parser/ros_utils/: ros1_helpers.hpp  ros2_helpers.hpp
include/ros_msg_parser/utils/: json.hpp  shape_shifter.hpp  tree.hpp  variant.hpp
src/: deserializer.cpp  ros_field.cpp  ros_message.cpp  ros_parser.cpp  ros_type.cpp  stringtree_leaf.cpp
src/ros_utils/: message_definition_cache.cpp  message_definition_cache.hpp  ros2_helpers.cpp
test/: test_parser.cpp  test_ros1.cpp  test_ros2.cpp
tests/: benchmark.cpp  config.h  deserializer_test.cpp  parser_test.cpp  stringtree_test.cpp
